force-app/main/default/objects/Billings__c/Billings__c.object-meta.xml
<CustomObject>
    <description>Object used to receive billing transactions</description>
    <label>Billings</label>
    <nameField>
        <displayFormat>B-{000000000}</displayFormat>
        <label>Billings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>