force-app/main/default/objects/Billings__c/fields/Adjustment_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reasoning__c</fullName>
    <description>used by sales ops to explain the reason for the adjustment.</description>
    <label>Adjustment Reasoning (Sales Ops only)</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>