force-app/main/default/objects/Billings__c/fields/Admin_Upload_Notes__c.field-meta.xml
<CustomField>
    <fullName>Admin_Upload_Notes__c</fullName>
    <inlineHelpText>Comments for each file that is being uploaded</inlineHelpText>
    <label>Admin Upload Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>