force-app/main/default/objects/Billings__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF( RecordTypeId =&apos;01234000000UPQy&apos;,  IF( OR( Number_of_Month__c = 0, ISBLANK(Number_of_Month__c  )), (Unit_Qty__c *  Unit_Rate__c)+ Uplift__c, (Unit_Qty__c *  Unit_Rate__c  * Number_of_Month__c  )+ Uplift__c) , (Unit_Qty__c *  Unit_Rate__c)+ Uplift__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>