force-app/main/default/objects/Billings__c/fields/Bill_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Billings</relationshipName>
    <type>Lookup</type>
</CustomField>