force-app/main/default/objects/Billings__c/fields/Bill_Code_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_Code_Product_Name__c</fullName>
    <formula>Bill_Code__r.Name</formula>
    <label>Bill Code - Product Name</label>
    <type>Text</type>
</CustomField>