force-app/main/default/objects/Billings__c/fields/Billing_Market__c.field-meta.xml
<CustomField>
    <fullName>Billing_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing Market should be populated for storage related bill codes and represents the Revenue District as opposed to the Owning District</description>
    <label>Billing Market</label>
    <referenceTo>Billing_Market__c</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Billings</relationshipName>
    <type>Lookup</type>
</CustomField>