force-app/main/default/objects/Billings__c/fields/Billing_Year__c.field-meta.xml
<CustomField>
    <fullName>Billing_Year__c</fullName>
    <formula>TEXT (YEAR (Invoice_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Year</label>
    <type>Text</type>
</CustomField>