force-app/main/default/objects/Billings__c/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <description>To capture the Business Line meta-data from Billings Transactions Imports</description>
    <label>Business Line</label>
    <length>55</length>
    <type>Text</type>
</CustomField>