force-app/main/default/objects/Billings__c/fields/Country_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Country_Coverage__c</fullName>
    <description>this value is pulled from the Parent Billing Market</description>
    <formula>TEXT( Billing_Market__r.Parent_Billing_Market__r.Country_Coverage__c )</formula>
    <label>Country Coverage</label>
    <type>Text</type>
</CustomField>