force-app/main/default/objects/Billings__c/fields/Country_Parent_ID_Change__c.field-meta.xml
<CustomField>
    <fullName>Country_Parent_ID_Change__c</fullName>
    <formula>IF( Country_Parent_ID_Formula__c  != LEFT( Country_Parent_ID_Text__c, LEN( Country_Parent_ID_Text__c)  -  3)  , &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Parent ID Change</label>
    <type>Text</type>
</CustomField>