force-app/main/default/objects/Billings__c/fields/Country_Parent_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Country_Parent_ID_Formula__c</fullName>
    <formula>Customer_Account__r.IM_Account__r.Country_Parent_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Parent ID Formula</label>
    <type>Text</type>
</CustomField>