force-app/main/default/objects/Billings__c/fields/Country_Parent_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Country_Parent_ID_Text__c</fullName>
    <description>IME required field</description>
    <externalId>true</externalId>
    <label>Country Parent ID</label>
    <length>99</length>
    <type>Text</type>
</CustomField>