force-app/main/default/objects/Billings__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <formula>Customer_Account__r.Name</formula>
    <label>Customer Id</label>
    <type>Text</type>
</CustomField>