force-app/main/default/objects/Billings__c/fields/CY_Amount__c.field-meta.xml
<CustomField>
    <fullName>CY_Amount__c</fullName>
    <formula>IF ( 

VALUE(Billing_Year__c)= VALUE($Label.Current_Commission_Year),

Amount__c ,

0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>