force-app/main/default/objects/Billings__c/fields/CY_Qty__c.field-meta.xml
<CustomField>
    <fullName>CY_Qty__c</fullName>
    <formula>IF(VALUE(Billing_Year__c)= VALUE($Label.Current_Commission_Year),Unit_Qty__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>