force-app/main/default/objects/Billings__c/fields/Datamart_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Datamart_Transaction_ID__c</fullName>
    <externalId>true</externalId>
    <label>Datamart Transaction ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>