force-app/main/default/objects/Billings__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <description>Date transaction entered source system.</description>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>