force-app/main/default/objects/Billings__c/fields/Exclude_Bill_Code_from_BoB__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Bill_Code_from_BoB__c</fullName>
    <formula>IF ( Bill_Code__r.Exclude_from_BoB__c = true, &quot;Exclude&quot;, &quot;Include&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude Bill Code from BoB</label>
    <type>Text</type>
</CustomField>