force-app/main/default/objects/Billings__c/fields/GL_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Description__c</fullName>
    <label>GL Account Description</label>
    <length>99</length>
    <type>Text</type>
</CustomField>