force-app/main/default/objects/Billings__c/fields/IMGA_Billings__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Billings__c</fullName>
    <description>Yes/No if the Billings record is on an IMGA</description>
    <formula>IF(ISBLANK(IMGA_Name_Text__c), &apos;Non-IMGA&apos;, &apos;IMGA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMGA Billings</label>
    <type>Text</type>
</CustomField>