force-app/main/default/objects/Billings__c/fields/IMGA_Name_Change__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Name_Change__c</fullName>
    <description>Compares the values in IMGA_Name_Formula and IMGA_Name_Text and returns TRUE if they differ</description>
    <formula>IF( IMGA_Name_Text__c !=  IMGA_Name_Formula__c, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMGA Name Change</label>
    <type>Text</type>
</CustomField>