force-app/main/default/objects/Billings__c/fields/IMGA_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Name_Formula__c</fullName>
    <description>Returns the indexed IMGA Name on the Account linked to the Customer Account</description>
    <formula>Customer_Account__r.IM_Account__r.IM_IMGA_Indexed__c</formula>
    <label>IMGA Name Formula</label>
    <type>Text</type>
</CustomField>