force-app/main/default/objects/Billings__c/fields/IMGA_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Name_Text__c</fullName>
    <externalId>true</externalId>
    <label>IMGA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>