force-app/main/default/objects/Billings__c/fields/Include_in_M4_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Include_in_M4_Coverage__c</fullName>
    <formula>IF(
Bill_Code__r.Include_in_M4_Coverage__c = TRUE,
&quot;Include&quot;,
&quot;Exclude&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in M4 Coverage</label>
    <type>Text</type>
</CustomField>