force-app/main/default/objects/Billings__c/fields/Includes_BoB_Coverage_on_IMGA__c.field-meta.xml
<CustomField>
    <fullName>Includes_BoB_Coverage_on_IMGA__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Includes BoB Coverage on IMGA</label>
    <type>Text</type>
</CustomField>