force-app/main/default/objects/Billings__c/fields/M4_CY_YTD__c.field-meta.xml
<CustomField>
    <fullName>M4_CY_YTD__c</fullName>
    <formula>AND( 
MONTH(Invoice_Date__c) &lt;= VALUE(null), 
YEAR(Invoice_Date__c) = VALUE(null) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M4 CY YTD</label>
    <type>Checkbox</type>
</CustomField>