force-app/main/default/objects/Billings__c/fields/M4_PY_YTD_Q3_Q4__c.field-meta.xml
<CustomField>
    <fullName>M4_PY_YTD_Q3_Q4__c</fullName>
    <formula>AND( 
MONTH(Invoice_Date__c) &gt;= 7, 
MONTH(Invoice_Date__c) &lt;= 12, 
YEAR(Invoice_Date__c) = (VALUE($Label.Current_Commission_Year)-1),
Bill_Code__r.Include_in_M4_Coverage__c  = true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M4 PY YTD Q3 Q4</label>
    <type>Checkbox</type>
</CustomField>