force-app/main/default/objects/Billings__c/fields/Manual_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>record created manually by sales operations</description>
    <label>Manual Adjustment</label>
    <type>Checkbox</type>
</CustomField>