force-app/main/default/objects/Billings__c/fields/Opportunity_ID_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_18_Digit__c</fullName>
    <description>CR # CHG0038786</description>
    <formula>Opportunity__r.Record_ID_18_Digit__c</formula>
    <label>Opportunity ID (18 Digit)</label>
    <type>Text</type>
</CustomField>