force-app/main/default/objects/Billings__c/fields/Override_Batch_Processing__c.field-meta.xml
<CustomField>
    <fullName>Override_Batch_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by sales operations to exclude individual records from being updated by the batch process</description>
    <label>Override Batch Processing</label>
    <type>Checkbox</type>
</CustomField>