force-app/main/default/objects/Billings__c/fields/Parent_Billing_Market__c.field-meta.xml
<CustomField>
    <fullName>Parent_Billing_Market__c</fullName>
    <description>this value is pulled from the Parent Billing Market</description>
    <formula>Billing_Market__r.Parent_Billing_Market__r.Name</formula>
    <label>Parent Billing Market</label>
    <type>Text</type>
</CustomField>