force-app/main/default/objects/Billings__c/fields/Parent_Billing_Market_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Billing_Market_ID__c</fullName>
    <formula>Billing_Market__r.Parent_Billing_Market__r.Record_ID_18_Digit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Billing Market ID</label>
    <type>Text</type>
</CustomField>