force-app/main/default/objects/Billings__c/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <formula>TEXT(Bill_Code__r.IM_Product_Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Class</label>
    <type>Text</type>
</CustomField>