force-app/main/default/objects/Billings__c/fields/PY_Qty__c.field-meta.xml
<CustomField>
    <fullName>PY_Qty__c</fullName>
    <formula>IF(VALUE(Billing_Year__c)=(VALUE($Label.Current_Commission_Year) - 1),Unit_Qty__c ,0)</formula>
    <label>PY Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>