force-app/main/default/objects/Billings__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Used to capture the source system of Billings Transactions uploaded into system</description>
    <label>Source System</label>
    <length>55</length>
    <type>Text</type>
</CustomField>