force-app/main/default/objects/Billings__c/fields/Unit_Qty__c.field-meta.xml
<CustomField>
    <fullName>Unit_Qty__c</fullName>
    <label>Unit Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>