force-app/main/default/objects/Billings__c/fields/Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Unit_Rate__c</fullName>
    <label>Unit Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>