force-app/main/default/objects/Billings__c/fields/Uplift__c.field-meta.xml
<CustomField>
    <fullName>Uplift__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Field used to capture adjustments taken at transactional level for certain DB&amp;R customers.</description>
    <label>Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>