force-app/main/default/objects/Billings__c/recordTypes/Country_Parent.recordType-meta.xml
<RecordType>
    <fullName>Country_Parent</fullName>
    <active>true</active>
    <description>Used for IME Sales</description>
    <label>Country Parent</label>
</RecordType>