force-app/main/default/objects/Billings__c/recordTypes/Manual_Entry.recordType-meta.xml
<RecordType>
    <fullName>Manual_Entry</fullName>
    <active>true</active>
    <description>used by sales operations for manual entries</description>
    <label>Manual Entry</label>
</RecordType>