force-app/main/default/objects/Billings__c/recordTypes/Standard_Billings.recordType-meta.xml
<RecordType>
    <fullName>Standard_Billings</fullName>
    <active>true</active>
    <description>used for standard billings transactions that are loaded monthly by a system admin</description>
    <label>Standard Billings</label>
</RecordType>