force-app/main/default/objects/Billings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Bill_Code__c</columns>
    <columns>Billing_Market__c</columns>
    <columns>Customer_Account__c</columns>
    <columns>IMGA_Name_Formula__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Manual_Adjustment__c</columns>
    <columns>Override_Batch_Processing__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>